--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,10 @@
 </head>
 <body bgcolor="#7fffd4">
 HELLO
+<div id="topPanel">
+    <div id="topPanelSection">
+        <button>Button!</button>
+    </div>
+</div>
 </body>
 </html>
